--- a/pandas_sklearn_rendered.ipynb
+++ b/pandas_sklearn_rendered.ipynb
@@ -100,7 +100,7 @@
    },
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd",
     "import numpy as np"
    ]
   },
