Updated sorting for a pandas series since it was broken for python 3.6.3

--- a/pandas_sklearn.ipynb
+++ b/pandas_sklearn.ipynb
@@ -440,7 +440,7 @@
    "outputs": [],
    "source": [
     "education_map = grouper.education_num.unique()\n",
-    "education_map.sort()\n",
+    "education_map.sort_values(inplace=True)\n",
     "\n",
     "with pd.option_context(\"max_rows\", 20):\n",
     "    print(education_map)"
@@ -455,7 +455,7 @@
    "outputs": [],
    "source": [
     "grouper.education_num.apply(lambda x : x.unique()[0])\n",
-    "education_map.sort()\n",
+    "education_map.sort_values(inplace=True)\n",
     "\n",
     "with pd.option_context(\"max_rows\", 20):\n",
     "    print(education_map)"
